# exonum-exchange-workshop

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: client.rs  context.rs  exonum.rs  lib.rs  main.rs
app/static/: exchange-client.js  index.html  styles.css
example/app/: Cargo.toml
example/app/static/: exchange-client.js  index.html
example/node/: .env
example/node/src/: lib.rs  main.rs
live-session/app/: Cargo.toml
live-session/app/src/: lib.rs  main.rs
live-session/app/static/: index.html
live-session/node/: Cargo.toml
live-session/node/src/: main.rs
node/: .env  Cargo.toml
node/src/: main.rs  protocol.rs  service.rs
src/: service.rs
