[package]
name = "trading"
version = "0.1.0"
authors = ["Denis Kolodin <denis.kolodin@xdev.re>"]

[dependencies]
failure = "0.1"
log = "0.4"
web_logger = "0.1"
ed25519-dalek = "0.6.1"
sha2 = "0.7.0"
stdweb = "0.4.6"
hex = "0.3.1"
byteorder = "1.2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = { git = "https://github.com/DenisKolodin/yew" }
rand = { version = "0.5", features = ["stdweb"] }
